# syster-tree

./: Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/systree/: __init__.py  cli.py  exceptions.py  models.py
tests/: __init__.py  conftest.py  test_cli.py
